build(release): bump version to 1.0.4 — agentic testing, video recording, network mocking
- Changelog updated with all post-1.0.0 features (Agentic AI, video recording,
  network mocking, PageAssert, Gemini provider, HTML report modernization,
  API testing improvements, Report Portal enhancements)
- Version bumped across pom.xml, README, docs-site (getting-started, junit5,
  landing page), and both changelogs
- Architecture audit fixes: driver providers, NetworkMock, CucumberStepLogger,
  RetryListener, VisualAssert, and unit test hardening